# aoc2022

./: .gitignore  .ocamlformat  Day1.java  Day2.java  Day3.java  bfs.lisp  challenges.opam  day0.lisp  day1.clj  day1.escript  day1.go  day1.ml  day1.scala  day1.silver.2.awk  day1.silver.awk  day10.lisp  day10.ml  day11.lisp  day12.lisp  day13.lisp  day13.ml  day14.lisp  day15.lisp  day16.lisp  day17.lisp  day18.lisp  day19.lisp  day2.go  day20.lisp  day21.lisp  day21.ml  day3.ml  day4.ml  day5.ml  day6.lisp  day6.ml  day7.ml  day8.ml  dune  dune-project  (+1 more)
